Add non-interactive scenario

--- a/DeviceIdentityProvisioning.ConsoleApp/appsettings.json
+++ b/DeviceIdentityProvisioning.ConsoleApp/appsettings.json
@@ -3,6 +3,12 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "<tenant-name>.onmicrosoft.com",
     "TenantId": "<tenant-id>",
-    "ClientId": "<client-id>"
+    "ClientId": "<client-id>",
+    "ClientSecret": "<client-secret>"
+  },
+  "TargetApi": {
+    "ClientId": "<target-api-client-id>",
+    "RoleId": "<target-api-role-id>",
+    "Scope": "<target-api-scope>"
   }
 }
