--- a/DeviceIdentityProvisioning.ConsoleApp/appsettings.json
+++ b/DeviceIdentityProvisioning.ConsoleApp/appsettings.json
@@ -9,6 +9,6 @@
   "TargetApi": {
     "ClientId": "<target-api-client-id>",
     "RoleId": "<target-api-role-id>",
-    "Scope": "<target-api-scope>"
+    "Scope": "<target-api-uri>/.default"
   }
 }
