--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/DeviceIdentityProvisioning.WebApp/bin/Debug/netcoreapp3.1/DeviceIdentityProvisioning.WebApp.dll",
+            "program": "${workspaceFolder}/DeviceIdentityProvisioning.WebApp/bin/Debug/net7.0/DeviceIdentityProvisioning.WebApp.dll",
             "args": [],
             "cwd": "${workspaceFolder}/DeviceIdentityProvisioning.WebApp",
             "stopAtEntry": false,
